--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,21 @@
+html,body,#map_canvas{
+  width: 95%;
+  height: 95%;
+  margin:0;
+  padding:0;
+  font-family: helvetica, 'helvetica neue', arial, sans-serif;
+}
+
 body {
-  padding: 50px;
+  padding: 10px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+p {
+  margin: 0 0;
+  padding: 0px;
 }
